fix: z-index bug fix

--- a/style.css
+++ b/style.css
@@ -925,6 +925,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
+  z-index: 2;
 }
 
 .experience__title {
@@ -1034,6 +1035,7 @@ body {
 .footer__container {
   width: 1200px;
   height: 650px;
+  z-index: 2;
 }
 
 .footer__contacts {
